# tievplus-carla-bridge

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  demo1.cpp  msg_test.cpp  pub_roadmarking_test.cpp  syncmode_demo.cpp  tiev-sim-once-plan.cpp  tiev-sim.cpp
MessageManager/: CMakeLists.txt  MessageManager.cpp  MessageManager.h  MessageManager.hpp  MessageManagerUtm.cpp  MessageManagerUtm.hpp  util.hpp
MessageManagerNew/: CMakeLists.txt  MessageManager.cpp  MessageManager.hpp  MessageManagerBase.cpp  utils.hpp
PIDController/: PIDController.cpp  PIDController.h  PIDController.hpp
PidController/: CMakeLists.txt  PidController.cpp  PidController.hpp
cfg/: bridge_config.json  message_manamger_parameters.json  pid_parameters.json  sensors_config.json
common/: CMakeLists.txt  nature.h
common/coordinate_converter/: CMakeLists.txt  coordinate_converter.cpp  coordinate_converter.h
common/nature/: CMakeLists.txt  point.h
common/osqp/build_bak/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  osqp-targets.cmake
common/osqp/build_bak/include/: Makefile  cmake_install.cmake
common/osqp/build_bak/lin_sys/: Makefile  cmake_install.cmake
common/osqp/build_bak/lin_sys/direct/: Makefile  cmake_install.cmake
common/osqp/build_bak/lin_sys/direct/pardiso/: Makefile  cmake_install.cmake
common/osqp/build_bak/lin_sys/direct/qdldl/: Makefile  cmake_install.cmake
common/osqp/build_bak/lin_sys/direct/qdldl/qdldl_sources/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  qdldl-targets.cmake
common/osqp/build_bak/src/: Makefile  cmake_install.cmake
common/osqp/include/: constants.h
common/osqp/src/: osqp.c
common/zcm/: TIEVREADME.md  install-deps-tiev.sh
msg/def/: MsgTrafficLightSignal.zcm  msg_accessory_control_signal.zcm  msg_chassis_command_signal.zcm  msg_fusion_map.zcm  msg_nav_info_signal.zcm  msg_planner_emergency_control_signal.zcm  msg_predicted_object_trajectory_list.zcm  msg_road_marking_list.zcm
msg/def_lcm/: msg_chassis_command_signal.lcm  msg_interaction_control_signal.lcm  msg_ui_map_list.lcm  msg_waterhorse_signal.lcm  rename.bat
msg/def_zcm/: msg_40_lidar_frame_list.zcm  msg_laser_map.zcm  msg_object_tracking_list.zcm  msg_parking_slot_list.zcm
msg/include/: BoundingBox.hpp  Chevron.hpp  Msg40LidarFrameList.hpp  MsgAccessoryControlSignal.hpp  MsgCanInfoSignal.hpp  MsgChassisCommandSignal.hpp  MsgHistoricalMap.hpp  MsgInteractionControlSignal.hpp  MsgPlannerEmergencyControlSignal.hpp  MsgRoadMarkingList.hpp  MsgTrafficLightSignal.hpp  MsgTrajectorySignal.hpp  MsgUiMapList.hpp  MsgUiSignalList.hpp  NamedBoolArray.hpp  NamedDoubleArray.hpp  NamedIntArray.hpp  ParkingSlot.hpp  ParkingSlotPoint.hpp  PredictedObject.hpp  TrackedObject.hpp  TrafficSign.hpp  TrajectoryPose.hpp  Zebra.hpp
msg/include_lcm/: BoundingBox.hpp  LinePoint.hpp  MsgAccessoryControlSignal.hpp  MsgCanInfoSignal.hpp  MsgNavInfoSignal.hpp  MsgRoadMarkingList.hpp  MsgTrafficSignSignal.hpp  MsgUiSignalList.hpp  NamedFloatArray.hpp  ParkingSlot.hpp  TrackedObject.hpp  TrafficSign.hpp  TrajectoryPose.hpp
msg/include_zcm/: MsgLaserMap.hpp  MsgParkingSlotList.hpp  NamedMapArray.hpp  ZCMLidarPoint.hpp
src/: simutils.hpp
src/MessageManager/: CMakeLists.txt  MessageManager.cpp  MessageManager.hpp  MessageManagerBase.cpp  MessageManagerBase.hpp  utils.hpp
src/MyWorld/: CMakeLists.txt  MyPlayer.cpp  MyPlayer.hpp  MyVehicle.cpp  MyWorld.cpp  MyWorld.hpp
src/PIDController/: CMakeLists.txt  PIDController.cpp  PIDController.hpp
src/VehicleController/: CMakeLists.txt  LongitudinalController.cpp  LongitudinalController.hpp  PidControllerBase.cpp  PidControllerBase.hpp  TievplusController.cpp  TievplusController.hpp
